--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -19,7 +19,7 @@ github_username: dalmobuzato
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
-lattes_id: http://lattes.cnpq.br/3910104103077088
+lattes_id: 3910104103077088
 # leetcode_id: # your LeetCode id
 # linkedin_username: # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
@@ -29,7 +29,7 @@ orcid_id: 0000-0003-1488-7581
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
-research_gate_profile: https://www.researchgate.net/profile/Dalmo-Buzato
+research_gate_profile: Dalmo-Buzato
 # rss_icon: true # comment this line to hide the RSS icon
 scholar_userid: l-VzTaMAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
