--- a/_config.yml
+++ b/_config.yml
@@ -189,6 +189,7 @@ exclude:
   - readme_preview/
   - vendor
   - _pages/cv.md
+  - _pages/blog.md
   - _pages/books.md
   - _pages/profiles.md
   - _pages/repositories.md
